Correção do Lexico igual foi pedido!

--- a/docs/Base/1.2.4.Lexicos.md
+++ b/docs/Base/1.2.4.Lexicos.md
@@ -41,95 +41,201 @@
 
 # Léxicos
 
-**L01 - Usuário**  
-- **Classificação:** Objeto  
-- **Sinônimos:**  
-- **Noção:** Pessoa que acessa o sistema. Pode ser organizador [L02] ou participante [L03].  
-- **Impacto:** Realiza as tarefas:  
+---
 
-**L02 - Administrador**  
-- **Classificação:** Objeto  
-- **Sinônimos:** Gestor, Moderador  
-- **Noção:** Pessoa responsável por gerenciar o conteúdo, cadastros, configurações e fluxos da plataforma.  
-- **Impacto:** Garante o funcionamento correto do sistema, modera interações e aprova conteúdos que promovem o bem-estar dos usuários.  
+### Agendar Sessão  
+<a id="agendar-sessao"></a>
 
-**L03 - Conteúdo**  
-- **Classificação:** Objeto  
-- **Sinônimos:** Material educativo, Post, Artigo  
-- **Noção:** Informações e recursos disponibilizados na plataforma para orientar e incentivar práticas de autocuidado.  
-- **Impacto:** Serve de base para a disseminação de conhecimento sobre saúde, dicas de bem-estar e práticas de autocuidado, influenciando diretamente o engajamento.  
+| **Campo**         | **Descrição**                                                                                                                                                 |
+|-------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| **Nome**          | Agendar Sessão                                                                                                                                                 |
+| **Classificação** | Verbo                                                                                                                                                          |
+| **Sinônimos**     | Marcar atividade, Programar sessão                                                                                                                             |
+| **Noção**         | Ação do [Usuário](#usuario) de reservar um horário para participar de uma [Sessão de Autocuidado](#sessao-de-autocuidado) oferecida pela plataforma.       |
+| **Impacto**       | Facilita o planejamento e a organização das atividades, incentivando a prática regular de autocuidado e melhorando a gestão de tempo dos [Usuários](#usuario). |
 
-**L04 - Sessão de Autocuidado**  
-- **Classificação:** Objeto  
-- **Sinônimos:** Atividade de bem-estar, Prática de autocuidado  
-- **Noção:** Conjunto de atividades planejadas para promover a saúde mental, física e emocional do usuário.  
-- **Impacto:** Auxilia na organização e na prática de hábitos saudáveis, proporcionando ao usuário um caminho estruturado para o autocuidado.
+---
 
-**L05 - Registrar Rotina**  
-- **Classificação:** Verbo  
-- **Sinônimos:** Documentar hábitos  
-- **Noção:** Ação de cadastrar ou atualizar as atividades diárias e práticas de autocuidado realizadas pelo usuário.  
-- **Impacto:** Permite o acompanhamento do progresso do usuário e a análise de seus hábitos, fomentando a melhoria contínua de sua rotina de autocuidado.
+### Administrador  
+<a id="administrador"></a>
 
-**L06 - Notificar**  
-- **Classificação:** Verbo  
-- **Sinônimos:** Alertar, Informar  
-- **Noção:** Ação de enviar mensagens automáticas ou lembretes para o usuário, sobre eventos, sessões ou atualizações.  
-- **Impacto:** Mantém o usuário engajado e informado sobre novidades, eventos e recomendações de autocuidado, promovendo a adesão constante às práticas.
+| **Campo**         | **Descrição**                                                                                                                                                 |
+|-------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| **Nome**          | Administrador                                                                                                                                                 |
+| **Classificação** | Objeto                                                                                                                                                        |
+| **Sinônimos**     | Gestor, Moderador                                                                                                                                             |
+| **Noção**         | Pessoa responsável por gerenciar o conteúdo, cadastros, configurações e fluxos da plataforma.                                                                 |
+| **Impacto**       | Garante o funcionamento correto do sistema, modera interações e aprova conteúdos que promovem o bem-estar dos [Usuários](#usuario).                              |
 
-**L07 - Feedback**  
-- **Classificação:** Objeto  
-- **Sinônimos:** Comentário, Avaliação  
-- **Noção:** Opinião ou resposta fornecida pelo usuário após interagir com uma funcionalidade ou conteúdo.  
-- **Impacto:** Fundamental para a melhoria contínua da plataforma, permitindo ajustes e personalizações que aprimoram a experiência do usuário.
+---
 
-**L08 - Personalização**  
-- **Classificação:** Conceito/Objeto  
-- **Sinônimos:** Customização, Adequação  
-- **Noção:** Processo pelo qual a plataforma adapta conteúdos, sessões e notificações às necessidades individuais do usuário.  
-- **Impacto:** Eleva a eficácia e a relevância das recomendações, tornando o sistema mais intuitivo e alinhado ao perfil e necessidades de cada usuário.
+### Bem-Estar  
+<a id="bem-estar"></a>
 
-**L09 - Agendar Sessão**  
-- **Classificação:** Verbo  
-- **Sinônimos:** Marcar atividade, Programar sessão  
-- **Noção:** Ação do usuário de reservar um horário para participar de uma sessão de autocuidado oferecida pela plataforma.  
-- **Impacto:** Facilita o planejamento e a organização das atividades, incentivando a prática regular de autocuidado e melhorando a gestão de tempo dos usuários.
+| **Campo**         | **Descrição**                                                                                                                                                 |
+|-------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| **Nome**          | Bem-Estar                                                                                                                                                     |
+| **Classificação** | Estado                                                                                                                                                        |
+| **Sinônimos**     | Qualidade de vida, Saúde integral                                                                                                                             |
+| **Noção**         | Estado físico, mental e emocional que a plataforma “Eu Me Amo” busca promover por meio dos seus conteúdos e funcionalidades.                                   |
+| **Impacto**       | Serve como objetivo central do sistema, influenciando a criação, organização e priorização de todas as funcionalidades e conteúdos desenvolvidos.             |
 
-**L10 - Bem-Estar**  
-- **Classificação:** Estado  
-- **Sinônimos:** Qualidade de vida, Saúde integral  
-- **Noção:** Estado físico, mental e emocional que a plataforma “Eu Me Amo” busca promover por meio dos seus conteúdos e funcionalidades.  
-- **Impacto:** Serve como objetivo central do sistema, influenciando a criação, organização e priorização de todas as funcionalidades e conteúdos desenvolvidos.
+---
 
-**L11 - Comunidade**  
-- **Classificação:** Objeto  
-- **Sinônimos:** Grupo, Fórum  
-- **Noção:** Espaço de interação onde os usuários compartilham experiências, dicas e apoio sobre autocuidado.  
-- **Impacto:** Estimula a troca de conhecimentos e o suporte mútuo, fortalecendo a fidelização e o engajamento na plataforma.
+### Comunidade  
+<a id="comunidade"></a>
 
-**L12 - Sessão de Consulta**  
-- **Classificação:** Objeto  
-- **Sinônimos:** Agendamento de consulta, Consulta com especialista  
-- **Noção:** Sessão realizada com profissionais especializados em saúde, bem-estar ou áreas relacionadas ao autocuidado.  
-- **Impacto:** Proporciona orientações personalizadas, reforça a credibilidade da plataforma e contribui para a promoção da saúde dos usuários.
+| **Campo**         | **Descrição**                                                                                                                                                 |
+|-------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| **Nome**          | Comunidade                                                                                                                                                    |
+| **Classificação** | Objeto                                                                                                                                                        |
+| **Sinônimos**     | Grupo, Fórum                                                                                                                                                  |
+| **Noção**         | Espaço de interação onde os [Usuários](#usuario) compartilham experiências, dicas e apoio sobre autocuidado.                                                  |
+| **Impacto**       | Estimula a troca de conhecimentos e o suporte mútuo, fortalecendo a fidelização e o engajamento na plataforma.                                                 |
 
-**L13 - Plano de Autocuidado**  
-- **Classificação:** Objeto/Conceito  
-- **Sinônimos:** Roteiro de bem-estar, Agenda de autocuidado  
-- **Noção:** Estrutura personalizada que organiza atividades, metas e recomendações de autocuidado para os usuários.  
-- **Impacto:** Facilita o acompanhamento dos progressos, ajudando os usuários a seguir rotinas consistentes e melhorando a qualidade de vida.
+---
 
-**L14 - Estatísticas de Engajamento**  
-- **Classificação:** Objeto  
-- **Sinônimos:** Relatórios, Análises  
-- **Noção:** Conjunto de dados quantitativos e qualitativos que refletem a interação dos usuários com as funcionalidades da plataforma.  
-- **Impacto:** Permite à equipe analisar comportamentos e tendências, orientando melhorias e adaptações para otimização da experiência do usuário.
+### Conteúdo  
+<a id="conteudo"></a>
 
-**L15 - Conteúdo Educativo**  
-- **Classificação:** Objeto  
-- **Sinônimos:** Artigo, Tutorial, Dica  
-- **Noção:** Materiais informativos focados em promover a saúde, o bem-estar e práticas de autocuidado, como tutoriais, artigos e dicas.  
-- **Impacto:** Estimula a disseminação de conhecimento e práticas saudáveis, apoiando a missão educativa da plataforma “Eu Me Amo”.
+| **Campo**         | **Descrição**                                                                                                                                                 |
+|-------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| **Nome**          | Conteúdo                                                                                                                                                      |
+| **Classificação** | Objeto                                                                                                                                                        |
+| **Sinônimos**     | Material educativo, Post, Artigo                                                                                                                              |
+| **Noção**         | Informações e recursos disponibilizados na plataforma para orientar e incentivar práticas de autocuidado.                                                     |
+| **Impacto**       | Serve de base para a disseminação de conhecimento sobre saúde, dicas de bem-estar e práticas de autocuidado, influenciando diretamente o engajamento dos [Usuários](#usuario). |
+
+---
+
+### Conteúdo Educativo  
+<a id="conteudo-educativo"></a>
+
+| **Campo**         | **Descrição**                                                                                                                                                 |
+|-------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| **Nome**          | Conteúdo Educativo                                                                                                                                             |
+| **Classificação** | Objeto                                                                                                                                                        |
+| **Sinônimos**     | Artigo, Tutorial, Dica                                                                                                                                        |
+| **Noção**         | Materiais informativos focados em promover a saúde, o bem-estar e práticas de autocuidado, como tutoriais, artigos e dicas.                                    |
+| **Impacto**       | Estimula a disseminação de conhecimento e práticas saudáveis, apoiando a missão educativa da plataforma “Eu Me Amo”.                                            |
+
+---
+
+### Estatísticas de Engajamento  
+<a id="estatisticas-de-engajamento"></a>
+
+| **Campo**         | **Descrição**                                                                                                                                                 |
+|-------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| **Nome**          | Estatísticas de Engajamento                                                                                                                                   |
+| **Classificação** | Objeto                                                                                                                                                        |
+| **Sinônimos**     | Relatórios, Análises                                                                                                                                          |
+| **Noção**         | Conjunto de dados quantitativos e qualitativos que refletem a interação dos [Usuários](#usuario) com as funcionalidades da plataforma.                        |
+| **Impacto**       | Permite à equipe analisar comportamentos e tendências, orientando melhorias e adaptações para otimização da experiência do usuário.                            |
+
+---
+
+### Feedback  
+<a id="feedback"></a>
+
+| **Campo**         | **Descrição**                                                                                                                                                 |
+|-------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| **Nome**          | Feedback                                                                                                                                                      |
+| **Classificação** | Objeto                                                                                                                                                        |
+| **Sinônimos**     | Comentário, Avaliação                                                                                                                                         |
+| **Noção**         | Opinião ou resposta fornecida pelo [Usuário](#usuario) após interagir com uma funcionalidade ou conteúdo.                                                     |
+| **Impacto**       | Fundamental para a melhoria contínua da plataforma, permitindo ajustes e personalizações que aprimoram a experiência do usuário.                              |
+
+---
+
+### Notificar  
+<a id="notificar"></a>
+
+| **Campo**         | **Descrição**                                                                                                                                                 |
+|-------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| **Nome**          | Notificar                                                                                                                                                     |
+| **Classificação** | Verbo                                                                                                                                                         |
+| **Sinônimos**     | Alertar, Informar                                                                                                                                             |
+| **Noção**         | Ação de enviar mensagens automáticas ou lembretes para o [Usuário](#usuario), sobre eventos, sessões ou atualizações.                                          |
+| **Impacto**       | Mantém o [Usuário](#usuario) engajado e informado sobre novidades, eventos e recomendações de autocuidado, promovendo a adesão constante às práticas.          |
+
+---
+
+### Personalização  
+<a id="personalizacao"></a>
+
+| **Campo**         | **Descrição**                                                                                                                                                 |
+|-------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| **Nome**          | Personalização                                                                                                                                               |
+| **Classificação** | Conceito/Objeto                                                                                                                                               |
+| **Sinônimos**     | Customização, Adequação                                                                                                                                       |
+| **Noção**         | Processo pelo qual a plataforma adapta conteúdos, sessões e notificações às necessidades individuais do [Usuário](#usuario).                                    |
+| **Impacto**       | Eleva a eficácia e a relevância das recomendações, tornando o sistema mais intuitivo e alinhado ao perfil e necessidades de cada [Usuário](#usuario).          |
+
+---
+
+### Plano de Autocuidado  
+<a id="plano-de-autocuidado"></a>
+
+| **Campo**         | **Descrição**                                                                                                                                                 |
+|-------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| **Nome**          | Plano de Autocuidado                                                                                                                                           |
+| **Classificação** | Objeto/Conceito                                                                                                                                               |
+| **Sinônimos**     | Roteiro de bem-estar, Agenda de autocuidado                                                                                                                   |
+| **Noção**         | Estrutura personalizada que organiza atividades, metas e recomendações de autocuidado para os [Usuários](#usuario).                                             |
+| **Impacto**       | Facilita o acompanhamento dos progressos, ajudando os [Usuários](#usuario) a seguir rotinas consistentes e melhorando a qualidade de vida.                     |
+
+---
+
+### Registrar Rotina  
+<a id="registrar-rotina"></a>
+
+| **Campo**         | **Descrição**                                                                                                                                                 |
+|-------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| **Nome**          | Registrar Rotina                                                                                                                                              |
+| **Classificação** | Verbo                                                                                                                                                         |
+| **Sinônimos**     | Documentar hábitos                                                                                                                                             |
+| **Noção**         | Ação de cadastrar ou atualizar as atividades diárias e práticas de autocuidado realizadas pelo [Usuário](#usuario).                                             |
+| **Impacto**       | Permite o acompanhamento do progresso do [Usuário](#usuario) e a análise de seus hábitos, fomentando a melhoria contínua de sua rotina de autocuidado.      |
+
+---
+
+### Sessão de Autocuidado  
+<a id="sessao-de-autocuidado"></a>
+
+| **Campo**         | **Descrição**                                                                                                                                                 |
+|-------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| **Nome**          | Sessão de Autocuidado                                                                                                                                         |
+| **Classificação** | Objeto                                                                                                                                                        |
+| **Sinônimos**     | Atividade de bem-estar, Prática de autocuidado                                                                                                                |
+| **Noção**         | Conjunto de atividades planejadas para promover a saúde mental, física e emocional do [Usuário](#usuario).                                                    |
+| **Impacto**       | Auxilia na organização e na prática de hábitos saudáveis, proporcionando ao [Usuário](#usuario) um caminho estruturado para o autocuidado.                   |
+
+---
+
+### Sessão de Consulta  
+<a id="sessao-de-consulta"></a>
+
+| **Campo**         | **Descrição**                                                                                                                                                 |
+|-------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| **Nome**          | Sessão de Consulta                                                                                                                                             |
+| **Classificação** | Objeto                                                                                                                                                        |
+| **Sinônimos**     | Agendamento de consulta, Consulta com especialista                                                                                                            |
+| **Noção**         | Sessão realizada com profissionais especializados em saúde, bem-estar ou áreas relacionadas ao autocuidado.                                                   |
+| **Impacto**       | Proporciona orientações personalizadas, reforça a credibilidade da plataforma e contribui para a promoção da saúde dos [Usuários](#usuario).                   |
+
+---
+
+### Usuário  
+<a id="usuario"></a>
+
+| **Campo**         | **Descrição**                                                                                                                                                 |
+|-------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| **Nome**          | Usuário                                                                                                                                                       |
+| **Classificação** | Objeto                                                                                                                                                        |
+| **Sinônimos**     | Pessoa, Cliente                                                                                                                                               |
+| **Noção**         | Pessoa que acessa o sistema. Pode ser [Administrador](#administrador) ou assumir outras funções conforme o contexto da plataforma.                          |
+| **Impacto**       | Realiza as tarefas e interage com as funcionalidades, sendo o principal beneficiário dos serviços oferecidos pela plataforma.                                |
+```
 
 
 # Histórico de Versão
