--- a/docs/Base/1.2.5.Publico-Alvo.md
+++ b/docs/Base/1.2.5.Publico-Alvo.md
@@ -93,4 +93,4 @@ Esse público também demonstra crescente interesse por **autoconhecimento** e p
 
 | Versão | Data | Descrição | Autor | Revisor
 |:-:|:-:|:-:|:-:|:-:|
-|`1.0`| 08/04/2025 | Criação do documento| [LuizaMaluf](https://github.com/LuizaMaluf)|  |
+|`1.0`| 08/04/2025 | Criação do documento| [LuizaMaluf](https://github.com/LuizaMaluf)| [Lucas Bottino](https://github.com/bottinolucas) |
